--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.8",
-    "express": "4.14.0"
+    "express": "4.14.0",
+    "mongoose": "4.6.5"
   },
   "devDependencies": {
     "webpack": "1.13.3"
